# flexism

./: Cargo.toml
crates/flexism-host/: Cargo.toml
crates/flexism-host/src/: main.rs
crates/flexism-plugin/: Cargo.toml
crates/flexism-plugin/examples/test-plugin/: Cargo.toml
crates/flexism-plugin/examples/test-plugin/src/: lib.rs
crates/flexism-plugin/src/: lib.rs
crates/flexism-plugin/wit/: graphics.wit  plugin.wit
